# Cargo.toml
[package]
name = "excel-export-consumer"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
dotenv = "0.15"
metrics = "0.22"
metrics-exporter-prometheus = "0.12"
rdkafka = { version = "0.36", features = ["default", "tokio"] }
reqwest = { version = "0.11", features = ["json", "rustls-tls"], default-features = false } # Sử dụng rustls-tls để tránh phụ thuộc OpenSSL
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.7", features = ["macros", "postgres", "runtime-tokio", "uuid", "chrono"], default-features = false } # Hoặc "mysql", "sqlite", "mssql" tùy DB của bạn
tokio = { version = "1.38", features = ["full"] } # Sử dụng "full" cho sự tiện lợi trong ví dụ
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
uuid = { version = "1.9", features = ["v4", "serde"] }
tracing-appender = "0.2"
chrono = { version = "0.4", features = ["serde", "time"] }

# Thêm feature cho xlsxwriter (hoặc bỏ đi nếu bạn tự implement ghi Excel)
xlsxwriter = { version = "0.7", optional = true }

[features]
default = []
xlsxwriter = ["dep:xlsxwriter"] # Định nghĩa feature để bật xlsxwriter